# backend/app/controllers/v1/kib/kibf_controller.rb
@@ -2,7 +2,7 @@ class V1::Kib::KibfController < ApplicationController
     before_action :authorize_request
   
     def index
-        @kib_f = Barang::Kibf.all.undeleted
+        @kib_f = Barang::Kibf.all
         if not @kib_f.present?
             render json: {
                 response_code: 422, 
@@ -228,8 +228,24 @@ class V1::Kib::KibfController < ApplicationController
         end
     end
     
+    def search_riwayat
+        @search = Barang::Kibf.deleted.select do | user | user.attributes.values.grep(/^#{params[:keywords]}/i).any? end
+        if not @search.present?
+            render json: {
+                response_code: 422, 
+                response_message: "Keyword tidak dapat ditemukan!"
+                }, status: :unprocessable_entity
+        else
+            render json: {
+                response_code: 200, 
+                response_message: "Success", 
+                data: @search
+                }, status: :ok
+        end
+    end
+
     def search
-        @search = Barang::Kibf.all.select do | user | user.attributes.values.grep(/^#{params[:keywords]}/i).any? end
+        @search = Barang::Kibf.undeleted.select do | user | user.attributes.values.grep(/^#{params[:keywords]}/i).any? end
         if not @search.present?
             render json: {
                 response_code: 422, 
